@startuml

title __T8's Class Diagram__\n

  namespace  {
    namespace om.example.t8 {
      class com.example.t8.HelloApplication {
      }
    }
  }
  

  namespace  {
    namespace om.example.t8 {
      class com.example.t8.HelloController {
      }
    }
  }
  

  namespace  {
    namespace odel {
      interface model.ChristmasTree {
      }
    }
  }
  

  namespace  {
    namespace odel {
      class model.ChristmasTreeImpl {
      }
    }
  }
  

  namespace  {
    namespace odel {
      class model.Girland {
      }
    }
  }
  

  namespace  {
    namespace odel {
      class model.Presents {
      }
    }
  }
  

  namespace  {
    namespace odel {
      class model.Star {
      }
    }
  }
  

  namespace  {
    namespace odel {
      abstract class model.TreeDecorator {
      }
    }
  }
  

  com.example.t8.HelloApplication -up-|> javafx.application.Application
  model.ChristmasTreeImpl .up.|> model.ChristmasTree
  model.Girland -up-|> model.TreeDecorator
  model.Presents -up-|> model.TreeDecorator
  model.Star -up-|> model.TreeDecorator
  model.TreeDecorator .up.|> model.ChristmasTree
  model.TreeDecorator o-- model.ChristmasTree : tree


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
